# YTVideoAssistant

backend/: main.py  pyproject.toml
backend/tools/: chat_completion.py  chunker.py  embeddings.py  transcript.py
frontend/src/: App.css  App.tsx  index.css
